pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-proxy-request-buffering-off.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-proxy-request-buffering-off
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"

spec:
  ingressClassName: nginx
  rules:
    - host: hostname.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
